--- a/cookserver/package.json
+++ b/cookserver/package.json
@@ -16,6 +16,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.0",
     "morgan": "^1.10.1",
+    "nodemailer": "^7.0.6",
+    "nodemailer-express-handlebars": "^7.0.0",
     "nodemon": "^3.1.10",
     "swagger-autogen": "^2.23.7",
     "swagger-ui-express": "^5.0.1"
